vid-07 Foundation6 : How to create Footer

--- a/css/app.css
+++ b/css/app.css
@@ -26,3 +26,17 @@ color: #FFFFFF;
     height: 100%;
 }
 
+
+footer{
+
+	background: #222222;
+	color: #ffffff;
+}
+
+footer li{
+	list-style-type: none;
+}
+
+footer li a{
+	color:#9d9d9d;
+}
