--- a/css/app.css
+++ b/css/app.css
@@ -40,3 +40,11 @@ footer li{
 footer li a{
 	color:#9d9d9d;
 }
+
+.is-active > .accordion-title::before {
+    display: none;
+}
+
+h1.accordion-title{
+	margin-bottom:0px 
+}
